--- a/cluster/node/etc/etc.toml
+++ b/cluster/node/etc/etc.toml
@@ -1,16 +1,18 @@
 # 进程号
-pid = "./run/gate.pid"
+pid = "./run/node.pid"
 # 统一时区设置。项目中的时间获取请使用xtime.Now()
 timezone = "Local"
 
 [cluster]
-    [cluster.gate]
+    [cluster.node]
         # 实例ID，网关集群中唯一。不填写默认自动生成唯一的实例ID
         id = ""
         # 实例名称
-        name = "gate"
+        name = "node"
         # RPC调用超时时间
         timeout = "1s"
+        # 编解码器。可选：json | proto
+        codec = "json"
 
 [locate]
     [locate.redis]
@@ -62,30 +64,6 @@ timezone = "Local"
             serverName = ""
             # 连接池大小，默认为10
             poolSize = 10
-
-[network]
-    [network.ws]
-        [network.ws.server]
-            # 服务器监听地址
-            addr = ":3553"
-            # 客户端连接路径
-            path = "/"
-            # 服务器最大连接数
-            maxConnNum = 5000
-            # 秘钥文件
-            keyFile = ""
-            # 证书文件
-            certFile = ""
-            # 跨域检测，空数组时不允许任何连接升级成websocket，未设置此参数时允许所有的链接升级成websocket
-            origins = ["*"]
-            # 握手超时时间，支持单位：纳秒（ns）、微秒（us | µs）、毫秒（ms）、秒（s）、分（m）、小时（h）、天（d）。默认为10s
-            handshakeTimeout = "10s"
-            # 心跳检测间隔时间。设置为0则不启用心跳检测，支持单位：纳秒（ns）、微秒（us | µs）、毫秒（ms）、秒（s）、分（m）、小时（h）、天（d）。默认为10s
-            heartbeatInterval = "10s"
-            # 心跳机制，默认为resp响应式心跳。可选：resp 响应式心跳 | tick 定时主推心跳
-            heartbeatMechanism = "resp"
-            # 下行心跳是否携带服务器时间，默认为true
-            heartbeatWithServerTime = true
 
 [packet]
     # 字节序，默认为big。可选：little | big
