--- a/cluster/client/etc/etc.toml
+++ b/cluster/client/etc/etc.toml
@@ -38,7 +38,7 @@
     # 文件切割方式
     fileCutRule = "day"
     # 是否启用调用文件全路径
-    callerFullPath = true
+    callerFullPath = false
     # 是否启用分级存储
     classifiedStorage = false
 
