--- a/cluster/hall/etc/etc.toml
+++ b/cluster/hall/etc/etc.toml
@@ -12,7 +12,7 @@ timezone = "Local"
         # RPC调用超时时间
         timeout = "1s"
         # 编解码器。可选：json | proto
-        codec = "json"
+        codec = "proto"
 
 [locate]
     [locate.redis]
@@ -46,24 +46,14 @@ timezone = "Local"
         # 健康检测失败后自动注销服务时间（秒），默认为30
         deregisterCriticalServiceAfter = 30
 
-[transport]
-    [transport.rpcx]
-        # RPCX服务器相关配置
-        [transport.rpcx.server]
-            # 服务器监听地址，空或:0时系统将会随机端口号
-            addr = ":0"
-            # 秘钥文件
-            keyFile = ""
-            # 证书文件
-            certFile = ""
-        # RPCX服务器相关配置
-        [transport.rpcx.client]
-            # 证书文件
-            certFile = ""
-            # 证书域名
-            serverName = ""
-            # 连接池大小，默认为10
-            poolSize = 10
+# RPCX服务器相关配置
+[transport.rpcx.client]
+    # 证书文件
+    certFile = ""
+    # 证书域名
+    serverName = ""
+    # 连接池大小，默认为10
+    poolSize = 10
 
 [packet]
     # 字节序，默认为big。可选：little | big
