--- a/cluster/hall/etc/etc.toml
+++ b/cluster/hall/etc/etc.toml
@@ -55,6 +55,14 @@ timezone = "Local"
     # 连接池大小，默认为10
     poolSize = 10
 
+[transport.grpc.client]
+    # 证书文件
+    certFile = ""
+    # 证书域名
+    serverName = ""
+    # 连接池大小，默认为10
+    poolSize = 10
+
 [packet]
     # 字节序，默认为big。可选：little | big
     byteOrder = "big"
