--- a/cluster/service/mesh/etc/etc.toml
+++ b/cluster/service/mesh/etc/etc.toml
@@ -1,9 +1,11 @@
 # 进程号
 pid = "./run/mesh.pid"
-# 开发模式。支持模式：debug、test、release（模式优先级：环境变量 < 配置文件 < 运行参数）
+# 开发模式。支持模式：debug、test、release（设置优先级：配置文件 < 环境变量 < 运行参数 < mode.SetMode()）
 mode = "debug"
 # 统一时区设置。项目中的时间获取请使用xtime.Now()
 timezone = "Local"
+# 容器关闭最大等待时间。支持单位：纳秒（ns）、微秒（us | µs）、毫秒（ms）、秒（s）、分（m）、小时（h）、天（d）。默认为0
+shutdownMaxWaitTime = "0s"
 
 [cluster.mesh]
     # 实例ID，网关集群中唯一。不填写默认自动生成唯一的实例ID
@@ -79,16 +81,39 @@ timezone = "Local"
     # 是否启用分级存储
     classifiedStorage = false
 
-[transport.grpc.server]
-    # 服务器监听地址
-    addr = ":0"
-    # 秘钥文件
-    keyFile = ""
-    # 证书文件
-    certFile = ""
 
-[transport.grpc.client]
-    # 证书文件
-    certFile = ""
-    # 证书域名
-    serverName = ""
+[transport]
+    # GRPC相关配置
+    [transport.grpc]
+        # GRPC服务器相关配置
+        [transport.grpc.server]
+            # 服务器监听地址。空或:0时系统将会随机端口号
+            addr = ":0"
+            # 秘钥文件
+            keyFile = ""
+            # 证书文件
+            certFile = ""
+        # GRPC客户端相关配置
+        [transport.grpc.client]
+            # 证书文件
+            certFile = ""
+            # 证书域名
+            serverName = ""
+    # RPCX相关配置
+    [transport.rpcx]
+        # RPCX服务器相关配置
+        [transport.rpcx.server]
+            # 服务器监听地址。空或:0时系统将会随机端口号
+            addr = ":0"
+            # 秘钥文件
+            keyFile = ""
+            # 证书文件
+            certFile = ""
+        # RPCX客户端相关配置
+        [transport.rpcx.client]
+            # 证书文件
+            certFile = ""
+            # 证书域名
+            serverName = ""
+            # 连接池大小，默认为10
+            poolSize = 10
