--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -72,6 +72,13 @@ services:
       - '4222:4222'
       - '6222:6222'
       - '8222:8222'
+  memcache:
+    image: devdb/memcache:latest
+    container_name: dev-memcache
+    platform: linux/x86_64
+    restart: always
+    ports:
+      - '11211:11211'
 networks:
   middleware:
     driver: bridge
