--- a/cluster/service/rpcx/node/etc/etc.toml
+++ b/cluster/service/rpcx/node/etc/etc.toml
@@ -4,6 +4,8 @@ pid = "./run/node.pid"
 mode = "debug"
 # 统一时区设置。项目中的时间获取请使用xtime.Now()
 timezone = "Local"
+# 容器关闭最大等待时间。支持单位：纳秒（ns）、微秒（us | µs）、毫秒（ms）、秒（s）、分（m）、小时（h）、天（d）。默认为0
+shutdownMaxWaitTime = "0s"
 
 [cluster.node]
     # 实例ID，网关集群中唯一。不填写默认自动生成唯一的实例ID
