--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -79,6 +79,23 @@ services:
     restart: always
     ports:
       - '11211:11211'
+  nacos:
+    image: nacos/nacos-server:latest
+    container_name: dev-nacos
+    platform: linux/x86_64
+    restart: always
+    environment:
+      - PREFER_HOST_MODE=hostname
+      - MODE=standalone
+      - NACOS_AUTH_IDENTITY_KEY=serverIdentity
+      - NACOS_AUTH_IDENTITY_VALUE=security
+      - NACOS_AUTH_TOKEN=SecretKey012345678901234567890123456789012345678901234567890123456789
+    volumes:
+      - ./nacos/logs:/home/nacos/logs
+      - ./nacos/conf/application.properties:/home/nacos/conf/application.properties
+    ports:
+      - '8848:8848'
+      - '9848:9848'
 networks:
   middleware:
     driver: bridge
