--- a/cluster/channel/tcp/gate/etc/etc.toml
+++ b/cluster/channel/tcp/gate/etc/etc.toml
@@ -1,5 +1,5 @@
 # 进程号
-pid = "./run/node.pid"
+pid = "./run/gate.pid"
 # 开发模式。支持模式：debug、test、release（设置优先级：配置文件 < 环境变量 < 运行参数 < mode.SetMode()）
 mode = "debug"
 # 统一时区设置。项目中的时间获取请使用xtime.Now()
@@ -7,17 +7,15 @@ timezone = "Local"
 # 容器关闭最大等待时间。支持单位：纳秒（ns）、微秒（us | µs）、毫秒（ms）、秒（s）、分（m）、小时（h）、天（d）。默认为0
 shutdownMaxWaitTime = "0s"
 
-[cluster.node]
+[cluster.gate]
     # 实例ID，网关集群中唯一。不填写默认自动生成唯一的实例ID
     id = ""
     # 实例名称
-    name = "node"
+    name = "gate"
     # 内建RPC服务器监听地址。不填写默认随机监听
     addr = ":0"
-    # 编解码器。可选：json | proto。默认为proto
-    codec = "json"
-    # RPC调用超时时间，支持单位：纳秒（ns）、微秒（us | µs）、毫秒（ms）、秒（s）、分（m）、小时（h）、天（d）。默认为3s
-    timeout = "3s"
+    # RPC调用超时时间
+    timeout = "1s"
 
 [locate.redis]
     # 客户端连接地址
@@ -33,19 +31,31 @@ shutdownMaxWaitTime = "0s"
     # key前缀
     prefix = "due"
 
-[registry.etcd]
-    # 客户端连接地址，默认为["127.0.0.1:2379"]
-    addrs = ["127.0.0.1:2379"]
-    # 客户端拨号超时时间，支持单位：纳秒（ns）、微秒（us | µs）、毫秒（ms）、秒（s）、分（m）、小时（h）、天（d）。默认为5s
-    dialTimeout = "5s"
-    # 命名空间，默认为services
-    namespace = "services"
-    # 超时时间，支持单位：纳秒（ns）、微秒（us | µs）、毫秒（ms）、秒（s）、分（m）、小时（h）、天（d）。默认为3s
-    timeout = "3s"
-    # 心跳重试次数，默认为3
-    retryTimes = 3
-    # 心跳重试间隔，支持单位：纳秒（ns）、微秒（us | µs）、毫秒（ms）、秒（s）、分（m）、小时（h）、天（d）。默认为10s
-    retryInterval = "10s"
+[registry.consul]
+    # 客户端连接地址，默认为127.0.0.1:8500
+    addr = "127.0.0.1:8500"
+    # 是否启用健康检查，默认为true
+    healthCheck = true
+    # 健康检查时间间隔（秒），仅在启用健康检查后生效，默认为10
+    healthCheckInterval = 10
+    # 健康检查超时时间（秒），仅在启用健康检查后生效，默认为5
+    healthCheckTimeout = 5
+    # 是否启用心跳检查，默认为true
+    heartbeatCheck = true
+    # 心跳检查时间间隔（秒），仅在启用心跳检查后生效，默认为10
+    heartbeatCheckInterval = 10
+    # 健康检测失败后自动注销服务时间（秒），默认为30
+    deregisterCriticalServiceAfter = 30
+
+[network.tcp.server]
+    # 服务器监听地址
+    addr = ":3553"
+    # 服务器最大连接数
+    maxConnNum = 5000
+    # 心跳检测间隔时间（秒），默认为10秒。设置为0则不启用心跳检测
+    heartbeatInterval = "10s"
+    # 心跳机制，默认resp
+    heartbeatMechanism = "resp"
 
 [packet]
     # 字节序，默认为big。可选：little | big
@@ -56,6 +66,8 @@ shutdownMaxWaitTime = "0s"
     seqBytes = 0
     # 消息字节数，默认为5000字节
     bufferBytes = 100000
+    # 是否携带服务器心跳时间
+    heartbeatTime = true
 
 [log]
     # 日志输出文件
